Crash when saving a Blender Image in a Python script #56610

Closed
opened 2018-08-30 00:14:44 +02:00 by Ryan Guy · 6 comments

System Information
Windows 10 Home, GTX 1070 8GB

also reproduced on:
Windows 10, GTX 1070 8GB
Windows 10 Professional, GTX Titan Xp 12GB
Windows 10 Professional, GTX 1060 6GB

Blender Version
Broken: 2.79 5e5f2ead43 (2018-08-27 17:58)
Worked: 2.79 5bd8ac9

Short description of error

Blender crashes immediately when running the following script which creates and saves Blender Images:

import bpy, os

icon_directory = os.path.join(bpy.context.user_preferences.filepaths.temporary_directory, "temp_icons")
os.makedirs(icon_directory, exist_ok=True)
for i in range(100):
    image = bpy.data.images.new("iconimg" + str(i), width=32, height=32)
    image.filepath_raw = os.path.join(icon_directory, str(i) + ".png")
    image.file_format = 'PNG'
    image.save()

This crash has been noticed to occur when using the nightly builds since about one week ago. Sometimes the script will successfully write a few images, but will eventually crash. Very often the crash will occur after writing a single image.

Exact steps for others to reproduce the error

  1. Open the attached .blend file in Blender
  2. Press the 'Run Script' button to execute the script

bug_report_run_script.blend

**System Information** Windows 10 Home, GTX 1070 8GB also reproduced on: Windows 10, GTX 1070 8GB Windows 10 Professional, GTX Titan Xp 12GB Windows 10 Professional, GTX 1060 6GB **Blender Version** Broken: 2.79 5e5f2ead437 (2018-08-27 17:58) Worked: 2.79 5bd8ac9 **Short description of error** Blender crashes immediately when running the following script which creates and saves Blender Images: ``` import bpy, os icon_directory = os.path.join(bpy.context.user_preferences.filepaths.temporary_directory, "temp_icons") os.makedirs(icon_directory, exist_ok=True) for i in range(100): image = bpy.data.images.new("iconimg" + str(i), width=32, height=32) image.filepath_raw = os.path.join(icon_directory, str(i) + ".png") image.file_format = 'PNG' image.save() ``` This crash has been noticed to occur when using the nightly builds since about one week ago. Sometimes the script will successfully write a few images, but will eventually crash. Very often the crash will occur after writing a single image. **Exact steps for others to reproduce the error** 1. Open the attached .blend file in Blender 2. Press the '*Run Script*' button to execute the script [bug_report_run_script.blend](https://archive.blender.org/developer/F4450080/bug_report_run_script.blend)
Author

Added subscriber: @rlguy

Added subscriber: @rlguy

Added subscriber: @StephenSwaney

Added subscriber: @StephenSwaney

What error are you getting? Running blender from the command line might provide some info.

What error are you getting? Running blender from the command line might provide some info.
Author

Here is the error message that I get when running from the command line:

Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FFC913A6DA1
Module  : C:\Users\ryanl\Downloads\blender-2.79.0-git.5e5f2ead437-windows64\pthreadVC2.dll

Another Blender user has let me know about this similar error that they receive using build 9abc2dfa493:

Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FFA7C846DA1
Module  : C:\Program Files\Blender Foundation\Blender\pthreadVC2.dll
Here is the error message that I get when running from the command line: ``` Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FFC913A6DA1 Module : C:\Users\ryanl\Downloads\blender-2.79.0-git.5e5f2ead437-windows64\pthreadVC2.dll ``` Another Blender user has let me know about this similar error that they receive using build 9abc2dfa493: ``` Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FFA7C846DA1 Module : C:\Program Files\Blender Foundation\Blender\pthreadVC2.dll ```

This issue was referenced by 22dc248f14

This issue was referenced by 22dc248f14be476cae67deb9731934dabb9c546f
Brecht Van Lommel self-assigned this 2018-08-30 12:39:48 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56610
No description provided.