Fix T56610: crash saving images with python API.